# KronosTech

./: .gitignore  CREDENCIALES.md  IMPLEMENTACION_CHECKOUT.md  LICENSE  README.md  package-lock.json
backend/: .env.example  .gitignore  Cargo.toml  run.ps1
backend/.sqlx/: query-12c4204848da1d5d08ab64374567f3536b0ded04aae0c3f04e43a40bc9c5f9b9.json  query-36dd708a7b1f1075c4514626d695483a4bbe8bc449c0a423ef7e7b4d0f39da5c.json  query-40f3e847f0a8a693eef942f58ed494583f41fb25ab2d116f38c7dbf99793661f.json  query-57bcba38d0d064af109a36dbc3951edf051eceaeec775ddbcd81e8ceb548222e.json  query-73866c0f5b70db1f3793473644b04bfadb56e87867558c255eb1ee0c35cf9397.json  query-80997826bd78313edce836d821395f42151e212e08d37965594a90f8ee27f2bf.json  query-8104f684907b1a8a331776a2c6afdc147da5dfd54576e16837a4922cbf2920c2.json  query-c05108ab3d924c2a4b6d5a8976f6fe16d7736eb604823d056c5e8b890ca5c611.json
backend/src/: main.rs
backend/src/config/: database.rs  mod.rs  settings.rs
backend/src/handlers/: admin_handler.rs  auth_handler.rs  carrito_handler.rs  catalogo_handler.rs  checkout_handler.rs  config_handler.rs  cupon_handler.rs  dashboard_handler.rs  descuento_handler.rs  direccion_handler.rs  inventario_handler.rs  log_handler.rs  metodo_pago_cliente_handler.rs  mod.rs  producto_handler.rs  reembolso_handler.rs  venta.rs
backend/src/models/: administrador.rs  asignacion_cupon.rs  carrito.rs  carrito_detalle.rs  cart.rs  categoria.rs  configuracion.rs  cupon.rs  descuento.rs  detalle_venta.rs  direccion.rs  envio.rs  especificacion_producto.rs  familia.rs  historial_estado_pago.rs  (+20 more)
(+129 files in other folders)
