[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "rust_decimal", "time", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }